--- a/Styles/wm_forms.css
+++ b/Styles/wm_forms.css
@@ -15,6 +15,8 @@
 
 /* Field Set Styles */
 
+/* All of the CSS is in Nolan's doing */
+
 fieldset {
    border: remove;
    width: 60%;
@@ -62,6 +64,16 @@ input {
    margin-right: 0px;
 }
 
+input {
+   width: 60%;
+}
+
+section {
+   display: block;
+   float: left;
+   width: 120px;
+}
+
 select {
    margin-top: 2px;
    margin-bottom: 2px;
@@ -69,6 +81,18 @@ select {
    margin-right: 0px;
 }
 
+input[type=color] {
+   display: block;
+   float: left;
+   width: 75px;
+}
+
+area {
+   font-size: 1.5em;
+   width: 100%;
+   height: 200px;
+   margin-bottom: 15px;
+}
 
 /* Placeholder Styles */
 
