--- a/Styles/wm_forms.css
+++ b/Styles/wm_forms.css
@@ -6,8 +6,8 @@
    Case Problem 3
 
    WidgetMage Form Styles
-   Author: 
-   Date:   
+   Author: Nolan Bell, Nathaniel Aufdenberg
+   Date:   12-13-23
 
    Filename: wm_forms.css
 
@@ -15,10 +15,10 @@
 
 /* Field Set Styles */
 
-/* All of the CSS is in Nolan's doing */
+/* All of the CSS is in Nathaniel/Nolan's doing */
 
 fieldset {
-   border: remove;
+   border: none;
    width: 60%;
    margin-top: 10px;
    margin-bottom: 10px;
@@ -37,7 +37,8 @@ legend {
 
 /* DIV Styles */
 
-div {
+div.slider {
+   float: left;
    width: 60%;
    margin-top: 2px;
    margin-bottom: 2px;
@@ -55,6 +56,7 @@ label {
    margin-bottom: 2px;
    margin-left: 0px;
    margin-right: 0px;
+   clear: left;
 }
 
 input {
@@ -62,32 +64,28 @@ input {
    margin-bottom: 2px;
    margin-left: 0px;
    margin-right: 0px;
-}
-
-input {
-   width: 60%;
-}
-
-section {
-   display: block;
-   float: left;
-   width: 120px;
 }
 
 select {
+   display: block;
+   float: left;
+   width: 120px;
    margin-top: 2px;
    margin-bottom: 2px;
    margin-left: 0px;
    margin-right: 0px;
 }
 
+input[type=range] {
+   width: 60%;
+}
 input[type=color] {
    display: block;
    float: left;
    width: 75px;
 }
 
-area {
+textarea {
    font-size: 1.5em;
    width: 100%;
    height: 200px;
@@ -95,9 +93,18 @@ area {
 }
 
 /* Placeholder Styles */
+/*Nathaniel*/
+::placeholder {
+   background: rgb(255, 255, 191);
+   color: rgb(255, 151, 151);
+   font-size: 1.5em;
+   
+   -webkit-background: rgb(255, 255, 191);
+   -webkit-color: rgb(255, 151, 151);
+   -webkit-font-size: 1.5em;
 
-
-
-
-
+   -moz-background: rgb(255, 255, 191);
+   -moz-color: rgb(255, 151, 151);
+   -moz-font-size: 1.5em;
+}
    
